--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+# Android Studio defaults
+*.iml
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+/captures
+
+# Github Defaults
 # Built application files
 *.apk
 *.ap_
